# hass-addons

./: .cursorignore  .devcontainer.json  .dockerignore  .eslintignore  .gitignore  .markdownlint-cli2.jsonc  .markdownlint.json  .markdownlintignore  .prettierignore  .prettierrc.json  .vale.ini  AGENTS.md  CLOUD_RELAY_TEST_EXECUTION_RESULTS.md  CLOUD_RELAY_TEST_RESULTS.md  CLOUD_RELAY_UI_TEST_SUCCESS.md  CONTRIBUTING.md  DELETE_ENTITIES_GUIDE.md  EXECUTIVE_SUMMARY.md  GUI_TESTING_SESSION.md  GUI_TEST_AUTOMATION.sh  IMPLEMENTATION_SUMMARY.md  INDEX_OF_CHANGES.md  LICENSE  LIMITATIONS_LIFTED.md  PHASE_8_GUI_TESTING_INSTRUCTIONS.md  PLAYWRIGHT_ENTITY_DELETION_SUMMARY.md  PR_CODE_REVIEW.md  README.md  RULES_OPTIMIZATION_SUMMARY.md  SUMMARY.md  cync-lan-source  eslint.config.js  hass-credentials.env.example  hass-cync-dev.code-workspace  lint_output.txt  localbuild.sh  package-lock.json  package.json  playwright.config.ts  pyproject.toml  (+5 more)
cync-controller/: .coverage  .coveragerc  CHANGELOG.md  DOCS.md  Dockerfile  LICENSE  README-DEV.md  README.md  apparmor.txt  build.yaml  config.yaml  coverage.json  pyproject.toml  pyrightconfig.json  pytest.ini  rebuild.sh  run.sh  test_results.txt
cync-controller/scripts/: README-onboarding-automation.md  __init__.py  automate_onboarding.py  configure-addon.sh  create-token-websocket.js  delete_mqtt_safe.py  fix_unused_call_results.py  lint-all.sh  reset-ha-to-fresh-onboarded.sh  run-mcp-with-env.sh  start-brave-search-mcp.sh  test_validate_edit_context.py  validate_edit_context.py
cync-controller/scripts/playwright/: addon_helpers.py  addon_helpers.pyi  helpers.ts
cync-controller/scripts/shell-common/: common-output.sh
cync-controller/src/cync_controller/: __init__.py  cloud_api.py  const.py  correlation.py  devices.py  exporter.py  instrumentation.py  logging_abstraction.py  main.py  mqtt_client.py  packet_checksum.py  packet_parser.py  server.py  structs.py  utils.py
cync-controller/src/cync_lan/: __init__.py  const.py  devices.py  main.py  mqtt_client.py  server.py  structs.py  utils.py
cync-controller/static/: index.html
cync-controller/tests/: __init__.py
cync-controller/tests/e2e/: README.md  __init__.py  conftest.py  happy-path.spec.ts  test-fan-speed.spec.ts  test_basic_commands.py  test_cloud_relay.py  test_config_changes.py  test_device_discovery.py  test_group_control.py  test_log_levels.py  test_mqtt_recovery.py  test_otp_flow.py  test_restart_button.py  test_state_sync.py
cync-controller/tests/integration/: __init__.py  conftest.py  docker-compose.test.yml  start-test.sh  (+4 more)
cync-lan/: CHANGELOG.md  DOCS.md  Dockerfile  README-DEV.md  README.md  apparmor.txt  build.yaml  config.yaml  pyproject.toml  rebuild.sh  run.sh
cync-lan/docs/: CLOUD_RELAY.md
cync-lan/static/: index.html  main.js  old.html
cync-lan/translations/: en.yaml
mitm/: FINDINGS_SUMMARY.md  MITM_TESTING_GUIDE.md  README.md  TESTING_PLAN.md  capture_status_comparison.sh  checksum.py  checksum_analysis.py  clean_capture_test.txt  create_certs.sh  inject_mode.sh  inject_raw.sh  mitm_capture.sh  mitm_with_injection.py  mode_change_analysis.md  mode_change_bt_off.txt  packet_parser.py  pyproject.toml  query_current_mode.sh  query_mode.py  restart_mitm.sh  run_mitm.sh  send_via_mitm.py  smart_bulb_mode_test.txt  smart_mode_capture.txt  smart_to_traditional.txt  switch_config_test.txt  test_mode_change.py  traditional_to_smart.txt  verify_checksum.py
mitm/archive/: README.md  config_change_capture.txt  mode_comparison.txt  mode_test_capture.txt  send_packet.sh
mitm/certs/: .gitignore  README.md
python-rebuild-tcp-comm/: .coverage  .gitignore  EXECUTIVE_SUMMARY.md  PHASE_0_COMPLETE.md  README.md  pyproject.toml  pyrightconfig.json
python-rebuild-tcp-comm/captures/: capture_20251107_152132.txt  capture_20251107_232328.txt
python-rebuild-tcp-comm/certs/: cert.pem  key.pem
python-rebuild-tcp-comm/docs/: 00-discovery.md  01-phase-0.md  02-phase-1-spec.md  02a-phase-0.5-protocol-validation.md  02b-phase-1a-protocol-codec.md  02c-phase-1b-reliable-transport.md  02d-phase-1c-backpressure.md  02e-phase-1d-simulator.md  03-phase-2-spec.md  04-phase-3-spec.md  README.md  TECHNICAL-REVIEW-2025-11-06.md  TECHNICAL-REVIEW-INDEX.md  phase-1a-manual-test-results.md  phase-1a-validation-report.md
python-rebuild-tcp-comm/mitm/: README.md  __init__.py  analyze-captures.py  analyze_captures.py  mitm-proxy.py  mitm_proxy.py  parse_capture.py  test_toggle_injection.py  validate-checksum-REFERENCE-ONLY.py
python-rebuild-tcp-comm/scripts/: README.md  build.sh  check-metrics.sh  clean.sh  debug.sh  format.sh  lint.sh  run.sh  setup.sh  start-mitm-local.sh  stop-mitm.sh  test-all.sh  test-integration.sh  test-toggle-injection.py  test-unit.sh  test.sh
python-rebuild-tcp-comm/test-reports/: integration-junit.xml
scripts/: README-onboarding-automation.md  README.md  analyze_lint_output.py  automate-onboarding.py  automate_onboarding.py  clear-mqtt-discovery.sh  configure-addon.sh  create-token-from-existing.js  create-token-websocket.js  create-worktree.sh  delete-devices.py  delete-mqtt-completely.py  delete-mqtt-entities-api.sh  delete-mqtt-entities-except-bridge.sh  delete-mqtt-entities-permanent.py  delete-mqtt-safe.py  fix-unused-call-results.py  fix_pyright_batch.py  fix_unused_call_results.py  lint-all.sh  monitor-test-memory.sh  nuclear-delete-mqtt.sh  pyproject.toml  requirements.txt  reset-ha-to-fresh-onboarded.sh  reset-ha-to-fresh.sh  run-integration-tests.sh  run-mcp-with-env.sh  setup-fresh-ha.sh  start-brave-search-mcp.sh  start-github-mcp.sh  test-cloud-relay.sh  test-validate-edit-context.py  validate-edit-context.py  validate_edit_context.pyi
scripts/playwright/: EXAMPLES.md  QUICKSTART.md  README-onboarding-trace.md  README.md  __init__.py  addon_helpers.py  delete-all-mqtt-entities-except-bridge.ts  delete-entities.ts  delete-mqtt-entities.ts  helpers.ts  test-click-shadow-div.spec.ts  test-fan-speed.spec.ts  trace-onboarding-websocket.ts
tools/brave-ai-grounding-cli/: .gitignore  README.md  brave_ai_grounding_cli.py  pyproject.toml
(+618 files in other folders)
