[build-system]
requires = ["poetry-core>=2.2.1,<3"]
build-backend = "poetry.core.masonry.api"

[project]
name = "cync_controller"
version = "0.0.4.13"
description = "Local MQTT + TCP transport controller for Cync/C by GE devices"
readme = "README.md"
authors = [{ name = "Joseph LaMartina", email = "6307064+jslamartina@users.noreply.github.com" }]
license = "MIT"
requires-python = ">=3.14.1,<3.15"
dependencies = [
    "pyyaml>=6.0.3,<7",
    "uvloop>=0.21.0,<1",
    "aiomqtt>=2.4.0,<3",
    "aiohttp>=3.10.8,<4",
    "httpx>=0.27,<1",
    "fastapi>=0.115.12,<1",
    "uvicorn>=0.34.3,<1",
    "tzlocal>=5.3.1,<6",
    "prometheus-client>=0.23,<1",
    "requests>=2.31,<3",
    "colorama>=0.4.6,<1"
]

[project.scripts]
cync-controller = "cync_controller.main:main"
rebuild-tcp-comm = "cync_controller.harness.toggler:main"
brave-ai-grounding-cli = "brave_ai_grounding_cli:main"

[tool.poetry]
packages = [
    { include = "cync_controller", from = "src" },
    { include = "scripts" },
    { include = "brave_ai_grounding_cli.py", from = "tools/brave-ai-grounding-cli" }
]

[tool.poetry.group.dev.dependencies]
python-dotenv = "^1.1"
types-PyYAML = "^6.0"

[tool.poetry.group.test.dependencies]
pytest = "^9.0"
pytest-asyncio = "^1.3"
pytest-cov = "^7.0"
pytest-timeout = "^2.4"
pytest-xdist = "^3.8"
pytest-playwright = "^0.7"
ruff = "^0.14"
basedpyright = "^1.35"

[tool.ruff]
target-version = "py314"
line-length = 120
extend-exclude = ["__pycache__", ".venv", "src/cync_controller/mitm/validate-checksum-REFERENCE-ONLY.py"]
force-exclude = true
respect-gitignore = true

[tool.ruff.lint]
select = [
    "D",
    "E",
    "W",
    "F",
    "I",
    "N",
    "UP",
    "B",
    "C",
    "C4",
    "DTZ",
    "T10",
    "EM",
    "ISC",
    "ICN",
    "G",
    "PIE",
    "T20",
    "PT",
    "Q",
    "RSE",
    "RET",
    "SIM",
    "TID",
    "ARG",
    "PTH",
    "PL",
    "TRY",
    "RUF",
    "S",
]
ignore = ["D203", "D211", "D213"]

[tool.ruff.lint.per-file-ignores]
"src/cync_controller/instrumentation.py" = ["PLC0415"]
"src/cync_controller/logging_abstraction.py" = ["PLC0415"]
"src/cync_controller/cloud_api.py" = ["PLC0415"]
"src/cync_controller/devices/__init__.py" = ["PLC0415"]
"src/cync_controller/devices/base_device.py" = ["PLC0415"]
"src/cync_controller/devices/device_commands.py" = ["PLC0415"]
"src/cync_controller/devices/group.py" = ["PLC0415"]
"src/cync_controller/devices/tcp_device.py" = ["PLC0415"]
"src/cync_controller/devices/tcp_packet_handler.py" = ["PLC0415"]
"scripts/automate_onboarding.py" = ["PLC0415"]
"tests/**/*.py" = [
    "PLC0415",
    "EM101",
    "TRY301",
    "TRY002",
    "SIM222",
    "SIM117",
    "PT018",
    "PT006",
    "PT015",
    "PLW2901",
    "PLR1714",
    "PLR0912",
    "PLR0915",
    "PLR0913",
    "ANN201",
    "D100",
    "D101",
    "D102",
    "D103",
    "D107",
    "FBT001",
    "FBT002",
    "FBT003",
    "PLR2004",
    "RET504",
    "B011",
    "RSE102",
    "E402",
    "ARG001",
    "ARG002",
    "S104",
    "SLF001",
    "S101",
]
"src/cync_controller/mitm/test_helpers/**/*.py" = ["T201"]
"src/cync_controller/mitm/test_*.py" = ["T201"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
skip-magic-trailing-comma = false
docstring-code-format = true
docstring-code-line-length = 88

[tool.pytest.ini_options]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
minversion = "8.0"
testpaths = ["tests"]
markers = [
    "unit: Unit tests (fast, isolated)",
    "integration: Integration tests (slower, requires services)",
    "e2e: End-to-end tests (slowest, full workflow)",
    "slow: Tests that take a long time to run",
    "skip: Skip this test",
    "serial: Tests that must run serially (restarts addon, changes config)",
]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = [
    "-v",
    "--showlocals",
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--tb=short",
    "-n",
    "auto",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
    "ignore::RuntimeWarning",
]
console_output_style = "progress"
log_cli = false
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(name)s - %(message)s"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
log_file = "pytest.log"
log_file_level = "DEBUG"
log_file_format = "%(asctime)s [%(levelname)8s] %(name)s - %(message)s"
log_file_date_format = "%Y-%m-%d %H:%M:%S"

[tool.coverage.run]
source = ["src/cync_controller"]
omit = ["*/tests/*", "*/__pycache__/*", "*/.venv/*"]

[tool.coverage.report]
fail_under = 90
precision = 2
show_missing = true
skip_covered = false



