[build-system]
requires = ["poetry-core>=2.2.1,<3"]
build-backend = "poetry.core.masonry.api"

[project]
name = "cync_controller"
version = "0.0.4.13"
description = "A Python library for local async MQTT control of Cync/C by GE smart devices"
readme = "README.md"
authors = [{name = "Joseph LaMartina", email = "6307064+jslamartina@users.noreply.github.com"}]
license = "MIT"
requires-python = ">=3.14.1,<3.15"
dependencies = [
    "pyyaml>=6.0.3,<7",
    "uvloop>=0.21.0,<1",
    "aiomqtt>=2.4.0,<3",
    "aiohttp>=3.10.8,<4",
    "fastapi>=0.115.12,<1",
    "uvicorn>=0.34.3,<1",
    "tzlocal>=5.3.1,<6",
]

[tool.poetry]
packages = [
    { include = "cync_controller", from = "src" }
]

[tool.poetry.group.dev.dependencies]
python-dotenv = "^1.1"
types-PyYAML = "^6.0"

[tool.poetry.group.test.dependencies]
pytest = "^9.0"
pytest-playwright = "^0.7"
pytest-asyncio = "^1.3"
pytest-cov = "^7.0"
pytest-timeout = "^2.4"
pytest-xdist = "^3.8"
ruff = "^0.14"
basedpyright = "^1.35"

[project.scripts]
cync-controller = "cync_controller.main:main"

[project.urls]
Homepage = "https://github.com/jslamartina/hass-addons"
Repository = "https://github.com/jslamartina/hass-addons"
Issues = "https://github.com/jslamartina/hass-addons/issues"

[tool.ruff]
# Enable project-wide linting
target-version = "py314"  # Requires Ruff >= 0.14.5
line-length = 120
# src = ["src"]  # Commented out to scan all Python files (respect-gitignore handles exclusions)
extend-exclude = ["__pycache__", ".venv"]
force-exclude = true
respect-gitignore = true

[tool.ruff.lint]
# Select rules to check (more comprehensive)
select = [
    "D",     # flake8-docstrings (docstrings)
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "N",     # pep8-naming
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "C4",    # flake8-comprehensions
    "DTZ",   # flake8-datetimez (timezone aware datetimes)
    "T10",   # flake8-debugger (no debugger statements)
    "EM",    # flake8-errmsg (error message best practices)
    "ISC",   # flake8-implicit-str-concat
    "ICN",   # flake8-import-conventions
    "G",     # flake8-logging-format
    "PIE",   # flake8-pie (misc lints)
    "T20",   # flake8-print (no print statements)
    "PT",    # flake8-pytest-style
    "Q",     # flake8-quotes
    "RSE",   # flake8-raise
    "RET",   # flake8-return
    "SIM",   # flake8-simplify
    "TID",   # flake8-tidy-imports
    "ARG",   # flake8-unused-arguments
    "PTH",   # flake8-use-pathlib
    "PL",    # pylint rules
    "TRY",   # tryceratops (exception handling)
    "RUF",   # ruff-specific rules (includes RUF001-003 for ambiguous unicode)
]

[tool.ruff.lint.per-file-ignores]
# Lazy imports to avoid circular dependencies
"src/cync_controller/instrumentation.py" = ["PLC0415"]
"src/cync_controller/logging_abstraction.py" = ["PLC0415"]
"src/cync_controller/cloud_api.py" = ["PLC0415"]
"src/cync_controller/devices/__init__.py" = ["PLC0415"]
"src/cync_controller/devices/base_device.py" = ["PLC0415"]
"src/cync_controller/devices/device_commands.py" = ["PLC0415"]
"src/cync_controller/devices/group.py" = ["PLC0415"]
"src/cync_controller/devices/tcp_device.py" = ["PLC0415"]
"src/cync_controller/devices/tcp_packet_handler.py" = ["PLC0415"]

# Scripts with lazy imports
"scripts/automate-onboarding.py" = ["PLC0415"]


# Tests: allow localized imports, unused args, and test-specific patterns
"tests/**/*.py" = [
    "PLC0415",  # allow relative imports in tests
    "EM101",    # allow string literal exceptions
    "TRY301", "TRY002",  # relax try/except style rules
    "SIM222", "SIM117",  # allow test helper constructs like nested for/if
    "PT018", "PT006", "PT015",  # relax pytest fixture style checks
    "PLW2901", "PLR1714",  # lenient on large helper functions
    "PLR0912", "PLR0915",  # allow complex/branchy test helpers
    "PLR0913",  # allow many arguments in fixtures/helpers
    "ANN201",  # allow missing return annotations in test functions
    "D100", "D101", "D102", "D103", "D107",  # allow missing docstrings
    "FBT001", "FBT002", "FBT003",  # allow boolean positional args
    "PLR2004",  # allow magic numbers in assertions/configs
    "RET504",  # allow multiple return statements in tests
    "B011",  # allow hardcoded `assert False` in tests
    "RSE102",  # allow bare `raise` in tests
    "E402",  # allow imports not at top (test-only)
    "ARG001", "ARG002",  # unused fixture arguments
    "S104",  # allow binding to all interfaces in test setup
    "SLF001",  # allow tests to access private members explicitly
    "S101",  # allow `assert` statements in tests
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
skip-magic-trailing-comma = false
docstring-code-format = true
docstring-code-line-length = 88

[tool.pytest.ini_options]
markers = [
    "unit: Unit tests (fast, isolated)",
    "integration: Integration tests (slower, requires services)",
    "e2e: End-to-end tests (slowest, full workflow)",
    "slow: Tests that take a long time to run",
    "skip: Skip this test",
    "serial: Tests that must run serially (restarts addon, changes config)",
]