[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cync_lan"
version = "0.2.0"
description = "A Python library for local async MQTT control of Cync/C by GE smart devices"
readme = "README.md"
authors = [{name = "baudneo", email = "86508179+baudneo@users.noreply.github.com"}]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
]
requires-python = ">=3.13"
dependencies = [
    "pyyaml==6.0.2",
    "uvloop>=0.21.0",
    "aiomqtt==2.3.0",
    "aiohttp>=3.10.8",
    "fastapi>=0.115.12",
    "uvicorn>=0.34.3",
    "tzlocal>=5.3.1",
]
[project.optional-dependencies]
dev = [
    "python-dotenv>=1.1.0",
]

[project.scripts]
cync-lan = "cync_lan.main:main"

[project.urls]
Homepage = "https://github.com/jslamartina/hass-addons"
Repository = "https://github.com/jslamartina/hass-addons"
Issues = "https://github.com/jslamartina/hass-addons/issues"

[tool.ruff]
# Enable project-wide linting
target-version = "py313"
line-length = 120
src = ["src"]
extend-exclude = ["__pycache__"]
force-exclude = true
respect-gitignore = true

[tool.ruff.lint]
# Select rules to check
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
]
ignore = [
    "E501",  # line too long
    "F405",  # star imports may be undefined
    "F403",  # star import used; unable to detect undefined names
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Allow unused imports in __init__.py files