[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "rebuild-tcp-comm"
version = "0.1.0"
description = "Lean harness and reliable TCP transport rebuild"
authors = ["TCP Rebuild Team <team@example.com>"]
readme = "README.md"
packages = [
    { include = "transport", from = "src" },
    { include = "metrics", from = "src" },
    { include = "harness", from = "src" },
    { include = "mitm" }
]

[tool.poetry.scripts]
cync-mitm = "mitm.mitm_proxy:cli_main"

[tool.poetry.dependencies]
python = "^3.13"
prometheus-client = "^0.20.0"
aiohttp = "^3.9.0"
requests = "^2.31.0"
uuid7 = "^0.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-asyncio = "^0.24.0"
pytest-cov = "^6.0.0"
pytest-timeout = "^2.3.1"
pytest-xdist = "^3.8.0"
ruff = "^0.6.9"
mypy = "^1.11.2"

[tool.ruff]
line-length = 100
target-version = "py313"
# src = ["src", "tests", "mitm"]  # Commented out to scan all Python files (respect-gitignore handles exclusions)
extend-exclude = ["__pycache__", "mitm/validate-checksum-REFERENCE-ONLY.py"]
force-exclude = true
respect-gitignore = true

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "N",     # pep8-naming
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "C",     # flake8-complexity (includes C901 cyclomatic complexity)
    "C4",    # flake8-comprehensions
    "DTZ",   # flake8-datetimez
    "T10",   # flake8-debugger
    "EM",    # flake8-errmsg
    "ISC",   # flake8-implicit-str-concat
    "ICN",   # flake8-import-conventions
    "G",     # flake8-logging-format
    "PIE",   # flake8-pie
    "T20",   # flake8-print
    "PT",    # flake8-pytest-style
    "Q",     # flake8-quotes
    "RSE",   # flake8-raise
    "RET",   # flake8-return
    "SIM",   # flake8-simplify
    "S",     # flake8-bandit (security)
    "TID",   # flake8-tidy-imports
    "ARG",   # flake8-unused-arguments
    "PTH",   # flake8-use-pathlib
    "PL",    # pylint rules
    "TRY",   # tryceratops
    "RUF",   # ruff-specific rules
]
ignore = [
    "E501",    # line too long (handled by formatter)
    "T20",     # print statements (used for CLI output)
    "S101",    # assert statements (acceptable in tests, and tests don't run with -O)
    "S311",    # pseudo-random generators (intentional for MITM/testing, not cryptographic)
    "S104",    # binding to all interfaces (intentional for MITM proxy)
    "S108",    # temporary file usage (intentional for MITM packet capture)
    "S310",    # URL open (intentional for testing/integration tests)
]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.mypy]
python_version = "3.13"
strict = true
explicit_package_bases = true
mypy_path = "src"
namespace_packages = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "unit: Unit tests with mocks",
    "integration: Integration tests with real TCP server",
]
testpaths = ["tests"]
timeout = 30

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/.venv/*",
]

[tool.coverage.report]
fail_under = 90
precision = 2
show_missing = true
skip_covered = false

