[build-system]
requires = ["poetry-core>=2.2.1,<3"]
build-backend = "poetry.core.masonry.api"

[project]
name = "python-rebuild-tcp-comm"
version = "0.1.0"
description = "Lean harness and reliable TCP transport rebuild"
authors = [{name = "Joseph LaMartina", email = "6307064+jslamartina@users.noreply.github.com"}]
readme = "README.md"
requires-python = ">=3.14.1,<3.15"
dependencies = [
    "prometheus-client>=0.23,<1",
    "aiohttp>=3.9,<4",
    "requests>=2.31,<3",
    "uuid7>=0.1,<1"
]
scripts = { rebuild-tcp-comm = "src.main:main" }

[tool.poetry]
packages = [
    { include = "protocol", from = "src" },
    { include = "transport", from = "src" },
    { include = "metrics", from = "src" },
    { include = "harness", from = "src" },
    { include = "mitm" }
]

[tool.poetry.group.dev.dependencies]
pytest = "^9.0"
pytest-asyncio = "^1.3"
pytest-cov = "^7.0"
pytest-timeout = "^2.3"
pytest-xdist = "^3.8"
ruff = "^0.14"
basedpyright = "^1.35"

[tool.ruff]
line-length = 120
target-version = "py314"
extend-exclude = ["__pycache__", ".venv", "mitm/validate-checksum-REFERENCE-ONLY.py"]
force-exclude = true
respect-gitignore = true

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "N",     # pep8-naming
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "C",     # flake8-complexity (includes C901 cyclomatic complexity)
    "C4",    # flake8-comprehensions
    "DTZ",   # flake8-datetimez
    "T10",   # flake8-debugger
    "EM",    # flake8-errmsg
    "ISC",   # flake8-implicit-str-concat
    "ICN",   # flake8-import-conventions
    "G",     # flake8-logging-format
    "PIE",   # flake8-pie
    "T20",   # flake8-print
    "PT",    # flake8-pytest-style
    "Q",     # flake8-quotes
    "RSE",   # flake8-raise
    "RET",   # flake8-return
    "SIM",   # flake8-simplify
    "S",     # flake8-bandit (security)
    "TID",   # flake8-tidy-imports
    "ARG",   # flake8-unused-arguments
    "PTH",   # flake8-use-pathlib
    "PL",    # pylint rules
    "TRY",   # tryceratops
    "RUF",   # ruff-specific rules
]
ignore = [

]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101"]  # Allow assert statements in test files (standard pytest practice)
"mitm/test_helpers/**/*.py" = ["T201"]  # Allow print statemenFts in test helper scripts (user-facing output)
"mitm/test_*.py" = ["T201"]  # Allow print statements in test scripts (user-facing output)
"mitm/validate-checksum-REFERENCE-ONLY.py" = ["T201"]  # Reference-only file

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "unit: Unit tests with mocks",
    "integration: Integration tests with real TCP server",
]
testpaths = ["tests"]
timeout = 30

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/.venv/*",
]

[tool.coverage.report]
fail_under = 90
precision = 2
show_missing = true
skip_covered = false
