[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cync-controller-scripts"
version = "0.1.0"
description = "Helper scripts and CLIs for hass-cync-dev tooling"
requires-python = ">=3.14"
dependencies = [
    "colorama>=0.4.6",
    "requests>=2.31.0",
]

[project.license]
text = "MIT"

[project.optional-dependencies]
dev = []

[tool.setuptools.packages.find]
where = ["src"]
